add build with nginx bin

--- a/.github/workflows/release-with-acme-module.yml
+++ b/.github/workflows/release-with-acme-module.yml
@@ -7,7 +7,7 @@
 # 2. A manual dispatch from the Actions UI.
 #
 
-name: Build and Release NGINX and ACME Module Package
+name: Build and Release NGINX with ACME Module Package
 
 on:
   workflow_dispatch:
