--- a/.github/workflows/release-with-acme-module.yml
+++ b/.github/workflows/release-with-acme-module.yml
@@ -94,7 +94,7 @@ jobs:
     if: needs.check-for-new-version.outputs.should_build == 'true'
     runs-on: ubuntu-latest
     # container: debian:stable
-    container: debian:11. # GLIBC 2.31
+    container: debian:11 # GLIBC 2.31
 
     steps:
       - name: Install Build Dependencies
