--- a/.github/workflows/release-with-acme-module.yml
+++ b/.github/workflows/release-with-acme-module.yml
@@ -124,10 +124,13 @@ jobs:
 
           BUILD_PATH=$(pwd)
           CC_OPT_VALUE="-g -O2 -ffile-prefix-map=$BUILD_PATH=. -fstack-protector-strong -Wformat -Werror=format-security -Wp,-D_FORTIFY_SOURCE=2 -fPIC"
+          
+          # --with-ld-opt='-Wl,-z,relro -Wl,-z,now -Wl,--as-needed -fPIC -Wl,--export-dynamic'
 
           ./configure \
             --with-cc-opt="$CC_OPT_VALUE" \
-            --with-ld-opt='-Wl,-z,relro -Wl,-z,now -Wl,--as-needed -fPIC -Wl,--export-dynamic' \
+
+            --with-ld-opt='-Wl,-z,relro -Wl,-z,now -Wl,--as-needed -fPIC' \
             --prefix=.. \
             --conf-path=nginx.conf \
             --http-log-path=logs/access.log \
@@ -171,7 +174,7 @@ jobs:
             --with-mail=dynamic \
             --with-stream=dynamic \
             --with-stream_geoip_module=dynamic \
-            --add-dynamic-module=../nginx-acme/
+            --add-module=../nginx-acme/
 
           make
 
@@ -181,17 +184,18 @@ jobs:
           BUILD_SUFFIX: ${{ needs.check-for-new-version.outputs.build_suffix }}
         run: |
           SOURCE_DIR="nginx-$NGINX_VERSION"
-          MODULE_PATH="$SOURCE_DIR/objs/ngx_http_acme_module.so"
+          # MODULE_PATH="$SOURCE_DIR/objs/ngx_http_acme_module.so"
           NGINX_BINARY_PATH="$SOURCE_DIR/objs/nginx"
 
-          if [ ! -f "$MODULE_PATH" ] || [ ! -f "$NGINX_BINARY_PATH" ]; then
+          # if [ ! -f "$MODULE_PATH" ] || [ ! -f "$NGINX_BINARY_PATH" ]; then
+          if [ ! -f "$NGINX_BINARY_PATH" ]; then
             echo "::error::Build failed! One or more required files were not created."
             exit 1
           fi
 
           echo "Build successful. Packaging artifacts..."
 
-          PACKAGE_BASE_DIR="nginx-acme-package"
+          PACKAGE_BASE_DIR="nginx-acme"
           # Create all necessary runtime directories
           mkdir -p "$PACKAGE_BASE_DIR/sbin"
           mkdir -p "$PACKAGE_BASE_DIR/modules"
@@ -206,13 +210,13 @@ jobs:
           mkdir -p "$PACKAGE_BASE_DIR/temp/uwsgi"
 
           cp "$NGINX_BINARY_PATH" "$PACKAGE_BASE_DIR/sbin/nginx"
-          cp "$MODULE_PATH" "$PACKAGE_BASE_DIR/modules/ngx_http_acme_module.so"
+          # cp "$MODULE_PATH" "$PACKAGE_BASE_DIR/modules/ngx_http_acme_module.so"
           cp "$SOURCE_DIR/conf/mime.types" "$PACKAGE_BASE_DIR/"
           cp "$SOURCE_DIR/conf/nginx.conf" "$PACKAGE_BASE_DIR/"
 
           # Adjust nginx.conf for clarity and best practice
           CONFIG_FILE="$PACKAGE_BASE_DIR/nginx.conf"
-          sed -i '1s|^|# To enable the NGINX ACME module, uncomment the following line:\n# load_module modules/ngx_http_acme_module.so;\n\n|' "$CONFIG_FILE"
+          # sed -i '1s|^|# To enable the NGINX ACME module, uncomment the following line:\n# load_module modules/ngx_http_acme_module.so;\n\n|' "$CONFIG_FILE"
           sed -i 's|#pid        logs/nginx.pid;|pid        run/nginx.pid;|' "$CONFIG_FILE"
           sed -i '/^\s*include\s*mime.types;\s*$/a \
               client_body_temp_path temp/body;\n    proxy_temp_path temp/proxy;\n    fastcgi_temp_path temp/fastcgi;\n    scgi_temp_path temp/scgi;\n    uwsgi_temp_path temp/uwsgi;' "$CONFIG_FILE"
